Dot.NET/libnodave.net.cs

	
	static extern IntPtr daveNewInterface(
	    daveOSserialType fd,
	    string name,
	    int localMPI,
	    int  useProto,
	    int speed
        );
	public daveInterface(daveOSserialType fd,
	    string name,
	    int localMPI,
	    int  useProto,
	    int speed) {
	    pointer=daveNewInterface(fd, name, localMPI, useProto, speed);
	}
	
/*
This was just here to check inheritance	
	~daveInterface(){
	    Console.WriteLine("destructor("+daveGetName(pointer)+")");
	    Console.WriteLine("~daveInterface()"+pointer);
	    daveFree(pointer);
	}
*/	
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveInitAdapter(IntPtr di);
	public int initAdapter() {
	    return daveInitAdapter(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected  static extern int daveListReachablePartners(IntPtr di, byte[] buffer);
	public int listReachablePartners(byte[] buffer) {
	    return daveListReachablePartners(pointer,buffer);
	}

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern void daveSetTimeout(IntPtr di, int time);
	public void setTimeout(int time) {
	    daveSetTimeout(pointer, time);
	}    

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetTimeout(IntPtr di);
	public int getTimeout() {
	    return daveGetTimeout(pointer);
	}    
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern IntPtr daveDisconnectAdapter(IntPtr di);
	public IntPtr disconnectAdapter() {
	    return daveDisconnectAdapter(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern string daveGetName(IntPtr di);
	public string getName() {
	    return daveGetName(pointer);
	}
	
    }
    
    public class daveConnection:pseudoPointer {
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern IntPtr daveNewConnection(
	    IntPtr di,
	    int MPI,
	    int rack,
	    int slot
	);
	public daveConnection(
	    daveInterface di,
	    int MPI,
	    int rack,
	    int slot
	) {
	    pointer=daveNewConnection(
	    di.pointer, MPI, rack, slot
	);
	}
/* This wa here to test inheritance
	~daveConnection(){
	    Console.WriteLine("~daveConnection()"+pointer);
	    daveFree(pointer);
	    daveFree(pointer);
	}
*/	
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveConnectPLC(IntPtr dc);
	public int connectPLC(){
	    return daveConnectPLC(pointer);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveDisconnectPLC(IntPtr dc);
	public int disconnectPLC() {
	    return daveDisconnectPLC(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern int daveReadBytes(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
	public int readBytes(int area, int DBnumber, int start, int len, byte[] buffer) {
	    return daveReadBytes(pointer, area, DBnumber, start, len, buffer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern int daveReadManyBytes(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
	public int readManyBytes(int area, int DBnumber, int start, int len, byte[] buffer) {
	    return daveReadManyBytes(pointer, area, DBnumber, start, len, buffer);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern int daveReadBits(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
	public int readBits(int area, int DBnumber, int start, int len, byte[] buffer) {
	    return daveReadBits(pointer, area, DBnumber, start, len, buffer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern int daveWriteBytes(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
	public int writeBytes(int area, int DBnumber, int start, int len, byte[] buffer) {
	    return daveWriteBytes(pointer, area, DBnumber, start, len, buffer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern int daveWriteManyBytes(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
	public int writeManyBytes(int area, int DBnumber, int start, int len, byte[] buffer) {
	    return daveWriteManyBytes(pointer, area, DBnumber, start, len, buffer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
        protected static extern int daveWriteBits(IntPtr dc, int area, int DBnumber, int start, int len, byte[] buffer);
	public int writeBits(int area, int DBnumber, int start, int len, byte[] buffer) {
	    return daveWriteBits(pointer, area, DBnumber, start, len, buffer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetS32(IntPtr dc);
	public int getS32() {
	    return daveGetS32(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetU32(IntPtr dc);
        public int getU32() {
	    return daveGetU32(pointer);
	}	
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetS16(IntPtr dc);
	public int getS16() {
	    return daveGetS16(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetU16(IntPtr dc);
	public int getU16() {
	    return daveGetU16(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetS8(IntPtr dc);
	public int getS8() {
	    return daveGetS8(pointer);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetU8(IntPtr dc);
	public int getU8() {
	    return daveGetU8(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern float daveGetFloat(IntPtr dc);
	public float getFloat() {
	    return daveGetFloat(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetCounterValue(IntPtr dc);
	public int getCounterValue() {
	    return daveGetCounterValue(pointer);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern float daveGetSeconds(IntPtr dc);
	public float getSeconds() {
	    return daveGetSeconds(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetS32At(IntPtr dc,int pos);
	public int getS32At(int pos) {
	    return daveGetS32At(pointer, pos);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetU32At(IntPtr dc, int pos);
        public int getU32At(int pos) {
	    return daveGetU32At(pointer, pos);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetS16At(IntPtr dc, int pos);
	public int getS16At(int pos) {
	    return daveGetS16At(pointer, pos);
	}
    	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetU16At(IntPtr dc, int pos);
        public int getU16At(int pos) {
	    return daveGetU16At(pointer, pos);
	}

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetS8At(IntPtr dc, int pos);
        public int getS8At(int pos) {
	    return daveGetS8At(pointer, pos);
	}
    	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetU8At(IntPtr dc, int pos);
        public int getU8At(int pos) {
	    return daveGetU8At(pointer, pos);
	}

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern float daveGetFloatAt(IntPtr dc, int pos);
        public float getFloatAt(int pos) {
	    return daveGetFloatAt(pointer, pos);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetCounterValueAt(IntPtr dc, int pos);
        public int getCounterValueAt(int pos) {
	    return daveGetCounterValueAt(pointer, pos);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern float daveGetSecondsAt(IntPtr dc, int pos);
        public float getSecondsAt(int pos) {
	    return daveGetSecondsAt(pointer, pos);
	}

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetAnswLen(IntPtr dc);
        public int getAnswLen() {
	    return daveGetAnswLen(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetMaxPDULen(IntPtr dc);
        public int getMaxPDULen() {
	    return daveGetMaxPDULen(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int davePrepareReadRequest(IntPtr dc, IntPtr p);
	public PDU prepareReadRequest() {
	    PDU p=new PDU();
	    davePrepareReadRequest(pointer, p.pointer);
	    return p;
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int davePrepareWriteRequest(IntPtr dc, IntPtr p);
	public PDU prepareWriteRequest() {
	    PDU p=new PDU();
	    davePrepareWriteRequest(pointer, p.pointer);
	    return p;
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveExecReadRequest(IntPtr dc, IntPtr p, IntPtr rl);
	public int execReadRequest(PDU p, resultSet rl) {
	    return daveExecReadRequest(pointer, p.pointer, rl.pointer);
	}
    
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveExecWriteRequest(IntPtr dc, IntPtr p, IntPtr rl);
	public int execWriteRequest(PDU p, resultSet rl) {
	    return daveExecWriteRequest(pointer, p.pointer, rl.pointer);
        }
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveUseResult(IntPtr dc, IntPtr rs, int number);	
	public int useResult(resultSet rs, int number) {
	    return daveUseResult(pointer, rs.pointer, number);
        }

	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveReadSZL(IntPtr dc,int id,int index,byte[] ddd, int len);
	public int readSZL(int id,int index,byte[] ddd, int len) {
	    return daveReadSZL(pointer,id,index, ddd, len);
	}	
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveStart(IntPtr dc);
	public int start() {
	    return daveStart(pointer);
	}
    
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveStop(IntPtr dc);
        public int stop() {
	    return daveStop(pointer);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveForce200(IntPtr dc, int area, int start, int val);
	public int force200(int area, int start, int val) {
	    return daveForce200(pointer, area, start, val);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveForceDisconnectIBH(IntPtr dc, int src, int dest, int MPI);
	public int forceDisconnectIBH(int src, int dest, int MPI) {
	    return daveForceDisconnectIBH(pointer, src, dest, MPI);
	}
	
	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveGetResponse(IntPtr dc);
	public int getGetResponse() {
	    return daveGetResponse(pointer);
	}

	[DllImport("libnodave.dll"/*, PreserveSig=false */ )]
	protected static extern int daveSendMessage(IntPtr dc, IntPtr p);
	public int getMessage(PDU p) {
	    return daveSendMessage(pointer, p.pointer);
	}
